--- a/sweet_pants/mainpage/templates/account/login.html
+++ b/sweet_pants/mainpage/templates/account/login.html
@@ -22,7 +22,7 @@
             <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
             {% endif %}
             <a class="button secondaryAction" href="{% url 'account_signup' %}"><h4>Sign Up</h4></a>
-            <a class="button secondaryAction" href="{% url 'account_reset_password' %}"><h4>Forgot Password?</h4></a>
+            <!--<a class="button secondaryAction" href="{% url 'account_reset_password' %}"><h4>Forgot Password?</h4></a>-->
             <br>
             <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
             <br>
