--- a/sweet_pants/mainpage/templates/mainpage/vendor_products.html
+++ b/sweet_pants/mainpage/templates/mainpage/vendor_products.html
@@ -1,4 +1,5 @@
 {% extends "mainpage/base_c.html" %}
+{% load static %}
 
 {% block title %}
 <title>Sweet Pants | Vendor Products</title>
@@ -23,6 +24,7 @@
 	</div>
 </section>
 
+{% if products %}
 	<section class="products section bg-gray">
 		<div class="container">
 			<div class="row">
@@ -38,9 +40,13 @@
 			{% for product in products %}
 				<div class="col-md-4">
 					<div class="product-item">
-						<div class="product-thumb">
+						<div class="product-thumb" style="height:60vh;">
 							{% if product.discount %}<span class="bage">{{ product.discount }}% OFF</span>{% endif %}
-							<img class="img-responsive" src="{{ product.image.url }}" alt="product-img" />
+							{% if product.image %}
+							<img class="img-responsive" style="height:60vh;" src="{{ product.image.url }}" alt="product-img" />
+							{% else %}
+							<img class="img-responsive" style="height:60vh;" src="{% static 'mainpage/images/default-product.jpeg' %}" alt="product-img" />
+							{% endif %}
 							<div class="preview-meta">
 								<ul>
 									<li>
@@ -66,5 +72,18 @@
 			</div>
 		</div>
 	</section>
+{% else %}
+<section class="empty-cart page-wrapper">
+	<div class="container">
+	  	<div class="row">
+			<div class="col-md-6 col-md-offset-3">
+		  		<div class="block text-center">
+					<h2 class="text-center">No products are sold by {{vendor}} currently!</h2>
+					<a href="{% url 'vendors' %}" class="btn btn-main mt-20">GO BACK</a>
+				</div>
+	  		</div>
+		</div>
+</section>
+{% endif %}
 
 {% endblock content %}
