minor bug fixes

--- a/sweet_pants/mainpage/templates/mainpage/orders-vendor.html
+++ b/sweet_pants/mainpage/templates/mainpage/orders-vendor.html
@@ -95,8 +95,8 @@
 			<div class="col-md-6 col-md-offset-3">
 		  		<div class="block text-center">
 			  		<i class="tf-ion-ios-cart-outline"></i>
-					<h2 class="text-center">Your Orderlist is currently empty. Please make an order first</h2>
-					<a href="{% url 'customer-homepage' %}" class="btn btn-main mt-20">Return to Shopping</a>
+					<h2 class="text-center">Your Orderlist is currently empty. Orders will show here once a customer buys it.</h2>
+					<a href="{% url 'customer-homepage' %}" class="btn btn-main mt-20">Return to HomePage</a>
 				</div>
 	  		</div>
 		</div>
