--- a/sweet_pants/mainpage/templates/mainpage/base_c.html
+++ b/sweet_pants/mainpage/templates/mainpage/base_c.html
@@ -278,7 +278,7 @@ Start Call To Action
 						<a href="{% url 'about' %}">ABOUT US</a>
 					</li>
 				</ul>
-				<p class="copyright-text">Copyright &copy;2023, Designed and Developed by Rudradatt Dave, Initiated by DVM </a></p>
+				<p class="copyright-text">Copyright &copy;2024, Designed and Developed For Odoo Combat</a></p>
 			</div>
 		</div>
 	</div>
