--- a/sweet_pants/mainpage/templates/mainpage/checkout.html
+++ b/sweet_pants/mainpage/templates/mainpage/checkout.html
@@ -79,10 +79,10 @@
                       </td>
                       {% if item.item.discount %}
                       <td class="">
-                        <a>Rs.{{ item.item.discounted_price }}</a>
+                        <a>Rs.{{ item.item.discounted_price }}/month</a>
                       </td>
                       {% else %}
-                      <td class="">Rs.{{ item.item.price }}</td>
+                      <td class="">Rs.{{ item.item.price }}/month</td>
                       {% endif %}
                       <td class="">
                         <a>{{ item.quantity }}</a>
